# aang

./: ChangeLog.md  LICENSE  README.md  aang.cabal  aang.hs  periodic-table.txt  pt-data1.csv  stack.yaml
app/: Main.hs
src/: Aang.hs
test/: Spec.hs
