name:                aang
version:             0.1.0
synopsis:            A silly program to check whether a word consists solely of chemical element symbols.
license:             BSD3
license-file:        LICENSE
author:              kmein
maintainer:          kieran.meinhardt@gmail.com
copyright:           (c) 2016 Kierán Meinhardt
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable aang
  main-is:             aang.hs
  build-depends:       base >=4.8 && <4.9, combinat, mtl
  default-language:    Haskell2010
